[package]
name = "day20"
version = "0.1.0"
authors = ["Ward Fenton <ward.fenton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
strum = "0.23.0"
strum_macros = "0.23.1"
parser = { path = "../parser" }